--- a/src/components/msg.css
+++ b/src/components/msg.css
@@ -1,4 +1,6 @@
 .msg{
+
+    font-weight: 1000;
     position: fixed;
     align-items:center;
     left: 50px;
@@ -6,7 +8,7 @@
     background-color: black;
     color: white;
     height: 50px;
-    width: 500px;
+    width: 400px;
     padding: 15px;
     border-radius: 10px;
     z-index: 3;
