--- a/src/Pages/Login/form.css
+++ b/src/Pages/Login/form.css
@@ -14,7 +14,7 @@ a:hover {
 
 }
 .square > div > h1{
-    font-family: pokomon;
+    font-family: pokemon;
     font-size: 50px;
     font-weight: 400;
     color: white;
