--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -20,10 +20,12 @@
 }
 
 .flexEnd {
-    justify-content: center;
-    margin-bottom: 80px;
     display: flex;
-    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px;
+    
+    
+   
 }
 
 .list {
@@ -38,15 +40,22 @@
 
 }
 
+.right {
+    transform: rotate(-90deg);
+}
+.left{
+    transform: rotate(90deg);
+}
+
 .list::-webkit-scrollbar {
     display: none;
 }
 
-.display{
+.display {
     display: flex;
-    justify-content: center;
-    margin-left: 6%;
-    margin-top: 4%;
+    justify-content: left;
+    padding-left: 6%;
+    padding-top: 4%;
     height: 60vh;
     width: 40vw;
 }
